# simple-saccade-finder

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
examples/: test_saccade_finder.py
src/simple_saccade_finder/: __init__.py  filter.py  saccade_finder.py
